# superharness

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  install.sh
.github/workflows/: aur.yml  homebrew.yml  pages.yml  ppa.yml  release.yml
.superharness/: events.json
assets/: agents_template.md
debian/: control  rules
debian/source/: options
docs/: CNAME  index.html  install.sh
packaging/aur/superharness/: .SRCINFO  PKGBUILD
packaging/aur/superharness-bin/: .SRCINFO  PKGBUILD
packaging/debian/debian/: changelog  copyright  rules
packaging/homebrew/: README.md  superharness.rb
packaging/ppa/: README.md  build-ppa.sh
src/: autonomous.rs  checkpoint.rs  events.rs  harness.rs  health.rs  heartbeat.rs  layout.rs  loop_guard.rs  main.rs  memory.rs  monitor.rs  output_cleaner.rs  pending_tasks.rs  plan.rs  project.rs  relay.rs  setup.rs  state.rs  tasks.rs  tmux.rs  util.rs  watch.rs
src/handlers/: checkpoint_cmds.rs  diagnostic_cmds.rs  display_cmds.rs  git_cmds.rs  harness_cmds.rs  heartbeat_cmds.rs  init.rs  misc.rs  mod.rs  pane_cmds.rs  pending_cmds.rs  relay_cmds.rs  spawn.rs  status.rs  task_cmds.rs
src/tmux/: layout.rs  mod.rs  panes.rs  session.rs  terminal.rs
tests/: heartbeat_integration.rs
