[package]
name = "superharness"
version = "0.2.0"
edition = "2024"
description = "CLI tools for AI agent orchestration via tmux"
license = "MIT"
repository = "https://github.com/backmeupplz/superharness"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
