[package]
name = "superharness"
version = "0.2.1"
edition = "2024"
description = "Autonomous multi-agent orchestrator for AI coding agents via tmux"
license = "MIT"
repository = "https://github.com/backmeupplz/superharness"
homepage = "https://backmeupplz.github.io/superharness"
keywords = ["ai", "agent", "tmux", "orchestrator", "opencode"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
term_size = "0.3.2"
dirs = "5"
crossterm = "0.28"
